Fix header spacing at small desktop  breakpoint

--- a/src/scss/transplant/layout/_header.scss
+++ b/src/scss/transplant/layout/_header.scss
@@ -73,7 +73,7 @@
                 display: inline-block;
                 font-family: $type-serif;
                 @include type-style(18px, 18px);
-                margin: 10px 7px 2px 0;
+                margin: 10px 4px 2px 0;
                 &:last-child {
                     margin: 10px 0 2px;
                 }
